# flai_agent

./: .gitignore  .lingmaignore  MEMORY_SYSTEM.md  MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  UV_SETUP.md  add_missing_batch.py  add_missing_characters.py  add_missing_openers_batch.py  check_online_db.py  claude-progress.txt  create_prod_db.py  deploy.py  deploy_db.py  deploy_prod_tables.py  environment.yml  project-progress.txt  pyproject.toml  requirements.txt  setup.sh  startup_production.py  test.py  test_character_lookup.py  test_code_integrity.py  test_fixes.py
.lingma/rules/: all_ploicy.md
PycharmProjects/flai_agent/: .gitignore  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  claude-progress.txt  deploy.sh  insert_preset_data.py  insert_preset_data.sql  install.sh  pre_generate_world_intros.py  project-progress.txt  pyproject.toml  run_insert.bat  run_prod_deploy.py  simple_insert.py  test_db.py
config/: config.yaml.example  llm_params.json
config/instance_world/: prompts.json
config/prompts/: character_openers.json  characters.json  constants.json  emotion_states.json  responses.json
data/: sensitive_words.txt
data/身份卡/: 4.txt
logs/: .gitkeep
scripts/: alter_account_to_user.py  check_coc_table.py  check_dialogue_history.py  check_save_slot.py  clean_dialogue_turn_headers.py  create_coc_tables.sql  create_instance_world_tables.sql  deploy_to_production.sql  log_extractor.py  log_extractor.sh  migrate_coc_gm_configs.py  migrate_coc_rules.py  migrate_identity_cards.py  test_create_session.py  test_dialogue_summary.py  test_load_save.py
src/: conf.yml  config.yaml  content_filter.py  custom_logger.py  database.py  dialogue_query.py  main.py  oss_client.py  schemas.py  sensitive_word_data.txt  sensitive_word_data_v2.txt  speech_api.py  utils.py  vector_query.py
src/api/: routes.py  schemas.py
src/core/: config_loader.py  content_filter.py  dialogue_query.py
src/models/: chat_memory.py  coc_game_state.py  coc_save_slot.py  instance_world.py  prompt_config.py  world_preset_data.py
src/services/: chat_service.py  coc_generator.py  coc_service.py  emotion_service.py  fortune_service.py  identity_card_service.py  llm_service.py  (+9 more)
unit_test/: create_coc_tables.sql  create_instance_world_tables.sql  manual_test.py  test_chat_service.py  test_coc_basic.py  test_coc_cleaning.py  test_coc_cleaning_v2.py  test_coc_cleaning_v3.py  test_coc_dialogue_flow.py  test_coc_final_verification.py  test_coc_flow.py  test_coc_sync.py  test_code_integrity.py  test_freak_world_flow.py  test_identity_card.py  test_import.py  test_instance_world_service_unit.py  test_load_save.py  test_multi_round.py  test_optimization.py  test_summary_trigger.py
(+65 files in other folders)
