[project]
name = "flai-agent"
version = "1.0.0"
description = "AI对话代理服务，支持多角色对话、情绪分析、语音合成"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # FastAPI Web Framework
    "fastapi>=0.114.0",
    "uvicorn>=0.30.6",
    "starlette>=0.38.5",
    
    # Database
    "sqlalchemy>=2.0.34",
    "pymysql>=1.1.1",
    
    # Data Validation
    "pydantic>=2.9.1",
    "pydantic-core>=2.23.3",
    
    # HTTP Clients
    "requests>=2.32.3",
    "httpx>=0.27.2",
    
    # Logging
    "loguru>=0.7.2",
    
    # Configuration
    "pyyaml>=6.0.2",
    
    # Cloud Services
    "oss2>=2.19.0",
    
    # Retry Logic
    "tenacity>=8.5.0",
    
    # Utils
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
vector = [
    "qdrant-client>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ['py38']

